force-app/main/default/objects/vlocity_ps__IncidentPartyRelationship__c/vlocity_ps__IncidentPartyRelationship__c.object-meta.xml
<CustomObject>
    <description>Deprecated - do not use.</description>
    <label>Incident Party</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incident Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>