force-app/main/default/objects/vlocity_ps__IncidentPartyRelationship__c/fields/vlocity_ps__Image__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Image__c</fullName>
    <label>Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>