force-app/main/default/objects/vlocity_ps__IncidentPartyRelationship__c/fields/vlocity_ps__IncidentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IncidentId__c</fullName>
    <label>Incident</label>
    <referenceTo>vlocity_ps__Incident__c</referenceTo>
    <relationshipLabel>Incident Parties</relationshipLabel>
    <relationshipName>Incident_Parties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>