force-app/main/default/objects/vlocity_ps__IncidentPartyRelationship__c/fields/vlocity_ps__PartyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PartyId__c</fullName>
    <label>Party</label>
    <referenceTo>vlocity_ps__Party__c</referenceTo>
    <relationshipLabel>Incident Parties</relationshipLabel>
    <relationshipName>Incident_Parties</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>