force-app/main/default/objects/vlocity_ps__IncidentPartyRelationship__c/fields/vlocity_ps__PartyNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PartyNumber__c</fullName>
    <formula>vlocity_ps__PartyId__r.vlocity_ps__AccountId__r.AccountNumber</formula>
    <label>Account #</label>
    <type>Text</type>
</CustomField>