force-app/main/default/objects/vlocity_ps__IncidentPartyRelationship__c/fields/vlocity_ps__PartyType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PartyType__c</fullName>
    <formula>vlocity_ps__PartyId__r.vlocity_ps__PartyEntityType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Type</label>
    <type>Text</type>
</CustomField>