force-app/main/default/objects/vlocity_ps__IncidentPartyRelationship__c/fields/vlocity_ps__SystemRoles__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SystemRoles__c</fullName>
    <description>Specify Roles as picklist values. Only these roles will be considered while creating Benefit Case Parties from Incident Parties. Match criteria : Incident Party Role IN this field picklist values.</description>
    <label>Incident BenefitCase Party Role Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Victim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>